# cub3d

./: .gitignore  CMakeLists.txt  CMakeLists_mac.txt  Makefile  a.out  conf.cub  cub3d_debug.c  tester  win.c
includes/: adders_p.h  conf.h  cub3d_utils.h  cvec.h  debug.h  intmlx.h  map_validates.h  parse.h  raycast.h  types.h
libft/: Makefile  Makefileoff  libft.h  test  test_main.c
libft/includes/: ft_printf_utils.h  libft_int.h
libft/srcs/: ft_atoi.c  ft_bzero.c  ft_calloc.c  ft_isalnum.c  ft_isalpha.c  ft_isdigit.c  ft_itoa.c  ft_lstclear.c  ft_lstmap.c  ft_lstsize.c  ft_math_1.c  ft_math_2.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_memset.c  ft_printf.c  ft_printf_base_writers.c  ft_printf_cnts.c  ft_printf_isers.c  ft_printf_printers_1.c  ft_printf_printers_2.c  ft_printf_printers_3.c  ft_printf_readers.c  ft_printf_spec.c  ft_printf_utils.c  ft_split.c  ft_strchr.c  ft_strlcat.c  ft_strlcpy.c  ft_strlen.c  ft_strmapi.c  ft_strncmp.c  ft_strnstr.c  ft_strrchr.c  ft_strtrim.c  ft_substr.c  get_next_line.c  (+1 more)
maps/: conf.cub  conf2.cub
minilibx/: Makefile.gen  Makefile.mk  README  README.md  configure
minilibx/man/man3/: mlx.3  mlx_loop.3  mlx_new_image.3  mlx_new_window.3  mlx_pixel_put.3
minilibx/test/: Makefile.gen  main.c  mlx-test  new_win.c
minilibx_mac/: mlx.h  mlx_get_screen_size.m
srcs/: bmp.c  cross.c  cub3d_debug.c  cvec_0.c  img_0.c  keybuff.c  load.c  main.c  move.c  raycast.c  raycast_1.c  render.c  shadow.c  sprite.c  straight.c  texs.c  tiles.c  tiny_math.c  win.c  z_buf.c
srcs/cvec/: cvec_0.c  cvec_1.c
srcs/img/: img_0.c
srcs/parsing/: adders_p_0.c  adders_p_1.c  conf.c  newers.c  parse.c  tester.c  utils_0.c  validate.c
texs/: ea0.xpm  ea1.xpm  no0.xpm  no1.xpm  s0.xpm  s1.xpm  so0.xpm  so1.xpm  we0.xpm  we1.xpm
texs/gui/: cross.xpm
